--- a/DetectHardware/app/src/main/res/xml/my_app_widget_info.xml
+++ b/DetectHardware/app/src/main/res/xml/my_app_widget_info.xml
@@ -5,7 +5,7 @@
     android:initialLayout="@layout/my_app_widget"
     android:minWidth="110dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/app_widget"
+    android:previewImage="@drawable/icon"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen">
